Small changes, defining layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="assets/css/layout.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 4</title>
 </head>
 <body>
+    <header>
+        HEADER
+    </header>
     <menu>
+        MENU
         <ul>
             <li>Opcion 1</li>
             <li>Opcion 2</li>
@@ -14,8 +20,10 @@
         </ul>
     </menu>
     <main>
-        
+        MAIN
     </main>
-    <footer></footer>
+    <footer>
+        FOOTER
+    </footer>
 </body>
 </html>
