Defined style, layouts for the solicited sices and the solicited animated gallery

--- a/index.html
+++ b/index.html
@@ -2,28 +2,75 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="assets/css/layout.css">
+    <link rel="stylesheet" href="assets/css/colors.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 4</title>
 </head>
 <body>
+    
     <header>
-        HEADER
+        <h1>Titulo</h1>
     </header>
     <menu>
-        MENU
-        <ul>
-            <li>Opcion 1</li>
-            <li>Opcion 2</li>
-            <li>Opcion 3</li>
-        </ul>
+        <div>
+            <ul>
+                <li>Opcion 1</li>
+                <li>Opcion 2</li>
+                <li>Opcion 3</li>
+            </ul>
+        </div>
     </menu>
     <main>
-        MAIN
+        <div class="tittle"><h3>GALERIA</h3></div>
+        <div class="gallery-wraper">
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+            </div>
+        </div>
+        <section>
+            <h3>Seccion 1</h3>
+            <p>
+                Descripcion de seccion
+            </p>
+        </div>
+        <section>
+            <h3>Seccion 2</h3>
+            <p>
+                Descripcion de seccion
+            </p>
+        </div>
     </main>
     <footer>
-        FOOTER
+        <p>FOOTER</p>
     </footer>
+    
 </body>
 </html>
