Changed theme to the cars movie

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <link rel="stylesheet" href="assets/css/colors.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <script src="https://kit.fontawesome.com/cec0a7647e.js" crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 4</title>
 </head>
 <body>
-    
-    <header>
-        <h1>Titulo</h1>
-    </header>
     <menu>
+        <div>
+            <img src="assets/img/Cars_Logo_Black.svg.png" alt="Cars logo">
+        </div>
         <div>
             <ul>
                 <li>Opcion 1</li>
@@ -28,48 +29,42 @@
         <div class="gallery-wraper">
             <div class="gallery-img">
                 <div class="img-tittle">TITULO</div>
-                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
+                <img src="./assets/img/gallery/86248.jpg" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/86269.jpg" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/86371.jpg" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/86584.jpg" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/86960.jpg" alt="">
+            </div>
+            <div class="gallery-img">
+                <div class="img-tittle">TITULO</div>
+                <img src="./assets/img/gallery/87429.jpg" alt="">
             </div>
             <div class="gallery-img">
                 <div class="img-tittle">TITULO</div>
                 <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
             </div>
-            <div class="gallery-img">
-                <div class="img-tittle">TITULO</div>
-                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
-            </div>
-            <div class="gallery-img">
-                <div class="img-tittle">TITULO</div>
-                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
-            </div>
-            <div class="gallery-img">
-                <div class="img-tittle">TITULO</div>
-                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
-            </div>
-            <div class="gallery-img">
-                <div class="img-tittle">TITULO</div>
-                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
-            </div>
-            <div class="gallery-img">
-                <div class="img-tittle">TITULO</div>
-                <img src="./assets/img/gallery/nvklb1no.bmp" alt="">
-            </div>
-        </div>
-        <section>
-            <h3>Seccion 1</h3>
-            <p>
-                Descripcion de seccion
-            </p>
-        </div>
-        <section>
-            <h3>Seccion 2</h3>
-            <p>
-                Descripcion de seccion
-            </p>
         </div>
     </main>
     <footer>
-        <p>FOOTER</p>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
+        </ul>
     </footer>
     
 </body>
