Adjusted Sizes, removed header, added scuare pattern

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <script src="https://kit.fontawesome.com/cec0a7647e.js" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 4</title>
@@ -18,14 +22,14 @@
         </div>
         <div>
             <ul>
-                <li>Opcion 1</li>
-                <li>Opcion 2</li>
-                <li>Opcion 3</li>
+                <li>Personajes</li>
+                <li>Eastereggs</li>
+                <li>Creditos</li>
             </ul>
         </div>
     </menu>
     <main>
-        <div class="tittle"><h3>GALERIA</h3></div>
+        <div class="tittle"><h3>AMBIENTES</h3></div>
         <div class="gallery-wraper">
             <div class="gallery-img">
                 <div class="img-tittle">TITULO</div>
@@ -57,13 +61,13 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="checkered">
         <ul>
-            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-twitch"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitch fa-xl"></i></a></li>
         </ul>
     </footer>
     
